# csvs-js

./: .gitignore  Cargo.toml  README.md  README.org  TODO.org  flake.nix  index.html  index.js  lib.rs  package.json  vite.config.js  webpack.config.js  webpack.wasm.js
rs/: Cargo.toml
rs/src/dataset/: mod.rs
rs/src/dataset/create/: mod.rs
rs/src/dataset/delete/: mod.rs
rs/src/dataset/insert/: mod.rs
rs/src/dataset/open/: mod.rs
rs/src/dataset/option/: line.rs  mod.rs  strategy.rs  tablet.rs
rs/src/dataset/prose/: mod.rs
rs/src/entry/: into_value.rs  mod.rs  sow.rs  try_from.rs
rs/tests/integration/: init.rs  main.rs  mow.rs  prose.rs  select.rs  sort.rs  update.rs
test/: .gitignore  Cargo.toml  README.md  lib.rs  package.json
test/cases/: prose.json  sort_ascending.json  sort_descending.json  to_schema.json  update.json
test/datasets/added_newline/: datum-saydate.csv  datum-sayname.csv
test/datasets/prose_default/: _-_.csv  event-date.csv
test/datasets/prose_nested/: _-_.csv  branch-trunk.csv  mind-branch.csv
test/datasets/prose_nested_empty/: .csvs.csv
test/datasets/version_3/: .csvs.csv
test/records/: option_actdate_2003.json  option_saydate_2003.json  option_sayname_2.json  option_sayname_3.json  query_actname_fail.json  query_array.json  query_event1.json  query_export1_fail.json  query_export1_unlinked.json  query_name2.json  query_newline.json  query_option_actname.json  query_option_export1.json  query_option_saydate.json  query_prose_japan.json  query_prose_mind.json  query_prose_search.json  query_prose_search_ru.json  query_regexp.json  query_schema.json  query_version.json  record_prose_everest.json  record_prose_insert.json  record_prose_japan.json  record_prose_japan_light.json  record_prose_japan_no_prose.json  record_prose_nested_update.json  record_schema_big.json  record_schema_simple.json  schema_simple.json
(+415 files in other folders)
