[package]
name = "csvs"
version = "0.2.1"
edition = "2021"

[lib]
name = "csvs"
crate-type = ["lib", "cdylib", "staticlib"]

[dev-dependencies]
csvs-test = { version = "1.0.1", git = "https://codeberg.org/norcivilianlabs/csvs-test" }

[dependencies]
assert-json-diff = "2.0.2"
async-stream = "0.3.6"
backtrace = "0.3.74"
clap = { version = "4.5.19", features = ["derive"] }
crossterm = "0.28.1"
csv = "1.3.1"
dir-diff = "0.3.3"
futures-core = "0.3.31"
futures-util = "0.3.31"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
temp-dir = { version = "0.1.16", git = "https://codeberg.org/fetsorn/temp-dir" }
text-file-sort = "0.1.2"
tokio = { version = "1.43.0", features = ["full"] }
