[package]
name = "csvs"
version = "0.3.3"
edition = "2021"
authors = [ "Anton Davydov <fetsorn@gmail.com>" ]

[lib]
name = "csvs"
crate-type = ["lib", "cdylib", "staticlib"]

[dev-dependencies]
#csvs-test = { version = "1.0.3", git = "https://codeberg.org/norcivilianlabs/csvs-test" }
csvs-test = { path = "../test" }
assert-json-diff = "2.0.2"

[dependencies]
dir-diff = "0.3.3"
async-stream = "0.3.6"
csv = "1.3.1"
futures-core = "0.3.31"
futures-util = "0.3.31"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
temp-dir = { version = "0.1.16", git = "https://codeberg.org/fetsorn/temp-dir" }
tokio = { version = "1.43.0", features = ["full"] }
