[package]
name = "csvs-test"
version = "1.0.4"
authors = [ "Anton Davydov <fetsorn@gmail.com>" ]

[lib]
name = "csvs_test"
crate-type = ["lib", "cdylib", "staticlib"]
path = "lib.rs"

[dependencies]
include_dir = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
temp-dir = "0.1.16"
